FEA: changed namespace and set up Docker Compose for production

--- a/qms-tests/sanity/.env
+++ b/qms-tests/sanity/.env
@@ -1,5 +1,5 @@
-PLATFORM_URI='http://huly.local:8083'
-PLATFORM_TRANSACTOR='ws://huly.local:3334'
+PLATFORM_URI='http://hanzoai.local:8083'
+PLATFORM_TRANSACTOR='ws://hanzoai.local:3334'
 PLATFORM_USER='user1'
 PLATFORM_USER_SECOND='user2'
 PLATFORM_USER_THIRD='user3'
