--- a/dev/.env
+++ b/dev/.env
@@ -3,6 +3,6 @@ MONGO_URL=mongodb://mongodb:27017?compressors=snappy
 DB_URL_PG=postgresql://postgres:example@postgres:5432
 BACKUP_STORAGE_CONFIG="minio|minio?accessKey=minioadmin&secretKey=minioadmin"
 BACKUP_BUCKET_NAME=dev-backups
-DB_CR_URL=postgresql://root@huly.local:26257/defaultdb?sslmode=disable
+DB_CR_URL=postgresql://root@hanzoai.local:26257/defaultdb?sslmode=disable
 QUEUE_CONFIG=redpanda:9092
-TRANSACTOR_URL=ws://huly.local:3332;;cockroach,
+TRANSACTOR_URL=ws://hanzoai.local:3332;;cockroach,
