--- a/production/compose.yml
+++ b/production/compose.yml
@@ -1,4 +1,4 @@
-name: Hanzo
+name: ${DOCKER_NAME}
 version: "3"
 services:
   nginx:
@@ -6,7 +6,7 @@ services:
     ports:
       - "${HTTP_BIND}:${HTTP_PORT}:80"
     volumes:
-      - ./.hanzo.nginx:/etc/nginx/conf.d/default.conf
+      - ./.huly.nginx:/etc/nginx/conf.d/default.conf
     restart: unless-stopped
 
   mongodb:
@@ -46,7 +46,7 @@ services:
     restart: unless-stopped
 
   rekoni:
-    image: hanzoai/rekoni-service:latest
+    image: hardcoreeng/rekoni-service:${HANZO_VERSION}
     environment:
       - SECRET=${SECRET}
     deploy:
@@ -56,7 +56,7 @@ services:
     restart: unless-stopped
 
   transactor:
-    image: hanzoai/transactor:latest
+    image: hardcoreeng/transactor:${HANZO_VERSION}
     environment:
       - SERVER_PORT=3333
       - SERVER_SECRET=${SECRET}
@@ -72,7 +72,7 @@ services:
     restart: unless-stopped
 
   collaborator:
-    image: hanzoai/collaborator:latest
+    image: hardcoreeng/collaborator:${HANZO_VERSION}
     environment:
       - COLLABORATOR_PORT=3078
       - SECRET=${SECRET}
@@ -83,7 +83,7 @@ services:
     restart: unless-stopped
 
   account:
-    image: hanzoai/account:latest
+    image: hardcoreeng/account:${HANZO_VERSION}
     environment:
       - SERVER_PORT=3000
       - SERVER_SECRET=${SECRET}
@@ -99,7 +99,7 @@ services:
     restart: unless-stopped
 
   workspace:
-    image: hanzoai/workspace:latest
+    image: hardcoreeng/workspace:${HANZO_VERSION}
     environment:
       - SERVER_SECRET=${SECRET}
       - DB_URL=mongodb://mongodb:27017
@@ -112,7 +112,7 @@ services:
     restart: unless-stopped
 
   front:
-    image: hanzoai/front:latest
+    image: hardcoreeng/front:${HANZO_VERSION}
     environment:
       - SERVER_PORT=8080
       - SERVER_SECRET=${SECRET}
@@ -129,19 +129,19 @@ services:
       - STORAGE_CONFIG=minio|minio?accessKey=minioadmin&secretKey=minioadmin
       - DB_URL=mongodb://mongodb:27017
       - MONGO_URL=mongodb://mongodb:27017
-      - TITLE=${TITLE:-Hanzo Self Host}
+      - TITLE=${TITLE:-Huly Self Host}
       - DEFAULT_LANGUAGE=${DEFAULT_LANGUAGE:-en}
       - LAST_NAME_FIRST=${LAST_NAME_FIRST:-true}
       - DESKTOP_UPDATES_CHANNEL=selfhost
     restart: unless-stopped
 
   fulltext:
-    image: hanzoai/fulltext:latest
+    image: hardcoreeng/fulltext:${HANZO_VERSION}
     environment:
       - SERVER_SECRET=${SECRET}
       - DB_URL=mongodb://mongodb:27017
       - FULLTEXT_DB_URL=http://elastic:9200
-      - ELASTIC_INDEX_NAME=hanzo_index
+      - ELASTIC_INDEX_NAME=huly_storage_index
       - STORAGE_CONFIG=minio|minio?accessKey=minioadmin&secretKey=minioadmin
       - REKONI_URL=http://rekoni:4004
       - ACCOUNTS_URL=http://account:3000
@@ -149,12 +149,11 @@ services:
     restart: unless-stopped
 
   stats:
-    image: hanzoai/stats:latest
+    image: hardcoreeng/stats:${HANZO_VERSION}
     environment:
       - PORT=4900
       - SERVER_SECRET=${SECRET}
     restart: unless-stopped
-
 volumes:
   db:
   elastic:
