FIC : fix architect

--- a/production/prod.yml
+++ b/production/prod.yml
@@ -47,6 +47,7 @@ services:
 
   rekoni:
     image: hanzoai/rekoni-service:latest
+    platform: linux/arm64
     environment:
       - SECRET=${SECRET}
     deploy:
@@ -57,6 +58,7 @@ services:
 
   transactor:
     image: hanzoai/transactor:latest
+    platform: linux/arm64
     environment:
       - SERVER_PORT=3333
       - SERVER_SECRET=${SECRET}
@@ -73,6 +75,7 @@ services:
 
   collaborator:
     image: hanzoai/collaborator:latest
+    platform: linux/arm64
     environment:
       - COLLABORATOR_PORT=3078
       - SECRET=${SECRET}
@@ -84,6 +87,7 @@ services:
 
   account:
     image: hanzoai/account:latest
+    platform: linux/arm64
     environment:
       - SERVER_PORT=3000
       - SERVER_SECRET=${SECRET}
@@ -100,6 +104,7 @@ services:
 
   workspace:
     image: hanzoai/workspace:latest
+    platform: linux/arm64
     environment:
       - SERVER_SECRET=${SECRET}
       - DB_URL=mongodb://mongodb:27017
@@ -113,6 +118,7 @@ services:
 
   front:
     image: hanzoai/front:latest
+    platform: linux/arm64
     environment:
       - SERVER_PORT=8080
       - SERVER_SECRET=${SECRET}
@@ -137,6 +143,7 @@ services:
 
   fulltext:
     image: hanzoai/fulltext:latest
+    platform: linux/arm64
     environment:
       - SERVER_SECRET=${SECRET}
       - DB_URL=mongodb://mongodb:27017
@@ -150,6 +157,7 @@ services:
 
   stats:
     image: hanzoai/stats:latest
+    platform: linux/arm64
     environment:
       - PORT=4900
       - SERVER_SECRET=${SECRET}
