--- a/production/traefik/docker-compose.yaml
+++ b/production/traefik/docker-compose.yaml
@@ -56,6 +56,7 @@ services:
 
   rekoni:
     image: hanzoai/rekoni-service:latest
+    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -78,6 +79,7 @@ services:
 
   transactor:
     image: hanzoai/transactor:latest
+    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -116,6 +118,7 @@ services:
   collaborator:
     image: hanzoai/collaborator:latest
     restart: unless-stopped
+    platform: linux/arm64
     environment:
       <<: *common-env
       COLLABORATOR_PORT: 3078
@@ -148,6 +151,7 @@ services:
 
   account:
     image: hanzoai/account:latest
+    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -171,6 +175,7 @@ services:
 
   workspace:
     image: hanzoai/workspace:latest
+    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -182,6 +187,7 @@ services:
   front:
     image: hanzoai/front:latest
     restart: unless-stopped
+    platform: linux/arm64
     environment:
       <<: *common-env
       SERVER_PORT: 8080
@@ -212,6 +218,7 @@ services:
   fulltext:
     image: hanzoai/fulltext:latest
     restart: unless-stopped
+    platform: linux/arm64
     environment:
       <<: *common-env
       FULLTEXT_DB_URL: http://elastic:9200
@@ -224,6 +231,7 @@ services:
   stats:
     image: hanzoai/stats:latest
     restart: unless-stopped
+    platform: linux/arm64
     environment:
       <<: *common-env
       PORT: 4900
