--- a/production/traefik/docker-compose.yaml
+++ b/production/traefik/docker-compose.yaml
@@ -8,6 +8,46 @@ x-common-env: &common-env
   STATS_URL: http://stats:4900
 
 services:
+  traefik:
+    restart: unless-stopped
+    image: "traefik:v2.10"
+    container_name: "traefik"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - ./letsencrypt:/letsencrypt
+    networks:
+      - traefik-public
+    command:
+      - "--log.level=DEBUG" # set to INFO for production
+      - "--api.insecure=false"
+      - "--api.dashboard=true"
+      - "--global.sendAnonymousUsage=false"
+      - "--global.checkNewVersion=false"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=traefik-public"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
+      - "--certificatesresolvers.myresolver.acme.email=hau@gmail.com"
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
+      - "--certificatesresolvers.myresolver.acme.caserver=http://acme-staging-v02.api.letsencrypt.org/directory" # For testing, comment out for production
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`hitek.com.vn`) && (PathPrefix(`/api`) || PathPrefix(`/traefik`))"
+      - "traefik.http.routers.traefik.service=api@internal"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      # strip prefix for traefik dashboard
+      - "traefik.http.routers.traefik.middlewares=strip-prefix-traefik"
+      - "traefik.http.middlewares.strip-prefix-traefik.stripprefix.prefixes=/traefik"
+      - "traefik.http.routers.traefik.tls=true"
+      - "traefik.http.routers.traefik.tls.certresolver=myresolver"
+
   mongodb:
     image: mongo:7-jammy
     container_name: mongodb
@@ -19,7 +59,6 @@ services:
       - db:/data/db
     networks:
       - internal-services
-      - hanzo-network
 
   minio:
     image: minio/minio
@@ -29,7 +68,6 @@ services:
       - files:/data
     networks:
       - internal-services
-      - hanzo-network
 
   elastic:
     image: elasticsearch:7.14.2
@@ -52,11 +90,9 @@ services:
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
     networks:
       - internal-services
-      - hanzo-network
 
   rekoni:
     image: hanzoai/rekoni-service:latest
-    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -66,12 +102,12 @@ services:
           memory: 500M
     networks:
       - internal-services
-      - hanzo-network
+      - traefik-public
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.rekoni.entrypoints=websecure"
       - "traefik.http.services.rekoni.loadbalancer.server.port=4004"
-      - "traefik.http.routers.rekoni.rule=Host(`localhost`) && PathPrefix(`/rekoni`)"
+      - "traefik.http.routers.rekoni.rule=Host(`hitek.com.vn`) && PathPrefix(`/rekoni`)"
       - "traefik.http.routers.rekoni.middlewares=rekoni-stripprefix"
       - "traefik.http.middlewares.rekoni-stripprefix.stripprefix.prefixes=/rekoni"
       - "traefik.http.routers.rekoni.tls=true"
@@ -79,7 +115,6 @@ services:
 
   transactor:
     image: hanzoai/transactor:latest
-    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -90,11 +125,12 @@ services:
       LAST_NAME_FIRST: true
     networks:
       - internal-services
-      - hanzo-network
+      - traefik-public
     labels:
       - "traefik.enable=true"
+      # WebSocket route
       - "traefik.http.routers.transactor-ws.entrypoints=websecure"
-      - "traefik.http.routers.transactor-ws.rule=Host(`localhost`) && PathPrefix(`/ws/transactor`)"
+      - "traefik.http.routers.transactor-ws.rule=Host(`hitek.com.vn`) && PathPrefix(`/ws/transactor`)"
       - "traefik.http.routers.transactor-ws.tls=true"
       - "traefik.http.routers.transactor-ws.tls.certresolver=myresolver"
       - "traefik.http.services.transactor-ws.loadbalancer.server.port=3333"
@@ -106,7 +142,7 @@ services:
 
       # HTTP route for non-WebSocket traffic
       - "traefik.http.routers.transactor.entrypoints=websecure"
-      - "traefik.http.routers.transactor.rule=Host(`localhost`) && PathPrefix(`/transactor`)"
+      - "traefik.http.routers.transactor.rule=Host(`hitek.com.vn`) && PathPrefix(`/transactor`)"
       - "traefik.http.routers.transactor.tls=true"
       - "traefik.http.routers.transactor.tls.certresolver=myresolver"
       - "traefik.http.services.transactor.loadbalancer.server.port=3333"
@@ -118,18 +154,17 @@ services:
   collaborator:
     image: hanzoai/collaborator:latest
     restart: unless-stopped
-    platform: linux/arm64
     environment:
       <<: *common-env
       COLLABORATOR_PORT: 3078
     networks:
       - internal-services
-      - hanzo-network
+      - traefik-public
     labels:
       - "traefik.enable=true"
       # WebSocket route
       - "traefik.http.routers.collaborator-ws.entrypoints=websecure"
-      - "traefik.http.routers.collaborator-ws.rule=Host(`localhost`) && PathPrefix(`/ws/collaborator`)"
+      - "traefik.http.routers.collaborator-ws.rule=Host(`hitek.com.vn`) && PathPrefix(`/ws/collaborator`)"
       - "traefik.http.routers.collaborator-ws.tls=true"
       - "traefik.http.routers.collaborator-ws.tls.certresolver=myresolver"
       - "traefik.http.services.collaborator-ws.loadbalancer.server.port=3078"
@@ -140,7 +175,7 @@ services:
       - "traefik.http.middlewares.strip-collaborator-ws-prefix.stripprefix.prefixes=/ws/collaborator"
       # HTTP route for non-WebSocket traffic
       - "traefik.http.routers.collaborator.entrypoints=websecure"
-      - "traefik.http.routers.collaborator.rule=Host(`localhost`) && PathPrefix(`/collaborator`)"
+      - "traefik.http.routers.collaborator.rule=Host(`hitek.com.vn`) && PathPrefix(`/collaborator`)"
       - "traefik.http.routers.collaborator.tls=true"
       - "traefik.http.routers.collaborator.tls.certresolver=myresolver"
       - "traefik.http.services.collaborator.loadbalancer.server.port=3078"
@@ -151,23 +186,22 @@ services:
 
   account:
     image: hanzoai/account:latest
-    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
       SERVER_PORT: 3000
-      TRANSACTOR_URL: ws://transactor:3333;wss://localhost/ws/transactor
+      TRANSACTOR_URL: ws://transactor:3333;wss://hitek.com.vn/ws/transactor
       FRONT_URL: http://front:8080
       MODEL_ENABLED: "*"
       ACCOUNT_PORT: 3000
     networks:
       - internal-services
-      - hanzo-network
+      - traefik-public
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.account.entrypoints=websecure"
       - "traefik.http.services.account.loadbalancer.server.port=3000"
-      - "traefik.http.routers.account.rule=Host(`localhost`) && PathPrefix(`/accounts`)"
+      - "traefik.http.routers.account.rule=Host(`hitek.com.vn`) && PathPrefix(`/accounts`)"
       - "traefik.http.routers.account.middlewares=account-stripprefix"
       - "traefik.http.middlewares.account-stripprefix.stripprefix.prefixes=/accounts"
       - "traefik.http.routers.account.tls=true"
@@ -175,11 +209,10 @@ services:
 
   workspace:
     image: hanzoai/workspace:latest
-    platform: linux/arm64
     restart: unless-stopped
     environment:
       <<: *common-env
-      TRANSACTOR_URL: ws://transactor:3333;wss://localhost/ws/transactor
+      TRANSACTOR_URL: ws://transactor:3333;wss://hitek.com.vn/ws/transactor
       MODEL_ENABLED: "*"
     networks:
       - internal-services
@@ -187,38 +220,36 @@ services:
   front:
     image: hanzoai/front:latest
     restart: unless-stopped
-    platform: linux/arm64
     environment:
       <<: *common-env
       SERVER_PORT: 8080
-      ACCOUNTS_URL: https://localhost/accounts
-      REKONI_URL: https://localhost/rekoni
-      CALENDAR_URL: https://localhost:8095
-      GMAIL_URL: https://localhost:8088
-      TELEGRAM_URL: https://localhost:8086
-      STATS_URL: https://localhost/stats
+      ACCOUNTS_URL: https://hitek.com.vn/accounts
+      REKONI_URL: https://hitek.com.vn/rekoni
+      CALENDAR_URL: https://hitek.com.vn:8095
+      GMAIL_URL: https://hitek.com.vn:8088
+      TELEGRAM_URL: https://hitek.com.vn:8086
+      STATS_URL: https://hitek.com.vn/stats
       UPLOAD_URL: /files
       ELASTIC_URL: http://elastic:9200
-      COLLABORATOR_URL: wss://localhost/ws/collaborator
-      TITLE: Hanzo Ai Seft Host
+      COLLABORATOR_URL: wss://hitek.com.vn/ws/collaborator
+      TITLE: Huly Self Host
       DEFAULT_LANGUAGE: en
       LAST_NAME_FIRST: true
       DESKTOP_UPDATES_CHANNEL: selfhost
     networks:
       - internal-services
-      - hanzo-network
+      - traefik-public
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.entrypoints=websecure"
       - "traefik.http.services.front.loadbalancer.server.port=8080"
-      - "traefik.http.routers.front.rule=Host(`localhost`)"
+      - "traefik.http.routers.front.rule=Host(`hitek.com.vn`)"
       - "traefik.http.routers.front.tls=true"
       - "traefik.http.routers.front.tls.certresolver=myresolver"
 
   fulltext:
     image: hanzoai/fulltext:latest
     restart: unless-stopped
-    platform: linux/arm64
     environment:
       <<: *common-env
       FULLTEXT_DB_URL: http://elastic:9200
@@ -226,35 +257,34 @@ services:
       REKONI_URL: http://rekoni:4004
     networks:
       - internal-services
-      - hanzo-network
 
   stats:
     image: hanzoai/stats:latest
     restart: unless-stopped
-    platform: linux/arm64
     environment:
       <<: *common-env
       PORT: 4900
     networks:
       - internal-services
-      - hanzo-network
+      - traefik-public
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.stats.entrypoints=websecure"
       - "traefik.http.services.stats.loadbalancer.server.port=4900"
-      - "traefik.http.routers.stats.rule=Host(`localhost`) && PathPrefix(`/stats`)"
+      - "traefik.http.routers.stats.rule=Host(`hitek.com.vn`) && PathPrefix(`/stats`)"
       - "traefik.http.routers.stats.middlewares=stats-stripprefix"
       - "traefik.http.middlewares.stats-stripprefix.stripprefix.prefixes=/stats"
       - "traefik.http.routers.stats.tls=true"
       - "traefik.http.routers.stats.tls.certresolver=myresolver"
 
 networks:
+  traefik-public:
+    name: traefik-public
   internal-services:
     name: internal-services
-  hanzo-network:
-    # external: true
 
 volumes:
   db:
   elastic:
   files:
+  letsencrypt:
