--- a/production/traefik/docker-compose.yaml
+++ b/production/traefik/docker-compose.yaml
@@ -8,46 +8,6 @@ x-common-env: &common-env
   STATS_URL: http://stats:4900
 
 services:
-  traefik:
-    restart: unless-stopped
-    image: "traefik:v2.10"
-    container_name: "traefik"
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - ./letsencrypt:/letsencrypt
-    networks:
-      - traefik-public
-    command:
-      - "--log.level=DEBUG" # set to INFO for production
-      - "--api.insecure=false"
-      - "--api.dashboard=true"
-      - "--global.sendAnonymousUsage=false"
-      - "--global.checkNewVersion=false"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--providers.docker.network=traefik-public"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
-      - "--certificatesresolvers.myresolver.acme.email=hau@gmail.com"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
-      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.caserver=http://acme-staging-v02.api.letsencrypt.org/directory" # For testing, comment out for production
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik.rule=Host(`hitek.com.vn`) && (PathPrefix(`/api`) || PathPrefix(`/traefik`))"
-      - "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.http.routers.traefik.entrypoints=websecure"
-      # strip prefix for traefik dashboard
-      - "traefik.http.routers.traefik.middlewares=strip-prefix-traefik"
-      - "traefik.http.middlewares.strip-prefix-traefik.stripprefix.prefixes=/traefik"
-      - "traefik.http.routers.traefik.tls=true"
-      - "traefik.http.routers.traefik.tls.certresolver=myresolver"
-
   mongodb:
     image: mongo:7-jammy
     container_name: mongodb
@@ -59,6 +19,7 @@ services:
       - db:/data/db
     networks:
       - internal-services
+      - hanzo-network
 
   minio:
     image: minio/minio
@@ -68,6 +29,7 @@ services:
       - files:/data
     networks:
       - internal-services
+      - hanzo-network
 
   elastic:
     image: elasticsearch:7.14.2
@@ -83,16 +45,18 @@ services:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms1024m -Xmx1024m
       - http.cors.enabled=true
-      - http.cors.allow-origin=http://localhost:8082
+      - http.cors.allow-origin=http://127.0.0.1:8082
     healthcheck:
       interval: 20s
       retries: 10
-      test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
+      test: curl -s http://127.0.0.1:9200/_cluster/health | grep -vq '"status":"red"'
     networks:
       - internal-services
+      - hanzo-network
 
   rekoni:
-    image: hanzoai/rekoni-service:latest
+    image: hanzoai/rekoni-service:5.1.1
+
     restart: unless-stopped
     environment:
       <<: *common-env
@@ -102,35 +66,35 @@ services:
           memory: 500M
     networks:
       - internal-services
-      - traefik-public
+      - hanzo-network
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.rekoni.entrypoints=websecure"
       - "traefik.http.services.rekoni.loadbalancer.server.port=4004"
-      - "traefik.http.routers.rekoni.rule=Host(`hitek.com.vn`) && PathPrefix(`/rekoni`)"
+      - "traefik.http.routers.rekoni.rule=Host(`127.0.0.1`) && PathPrefix(`/rekoni`)"
       - "traefik.http.routers.rekoni.middlewares=rekoni-stripprefix"
       - "traefik.http.middlewares.rekoni-stripprefix.stripprefix.prefixes=/rekoni"
       - "traefik.http.routers.rekoni.tls=true"
       - "traefik.http.routers.rekoni.tls.certresolver=myresolver"
 
   transactor:
-    image: hanzoai/transactor:latest
+    image: hanzoai/transactor:5.1.1
+
     restart: unless-stopped
     environment:
       <<: *common-env
       SERVER_PORT: 3333
       SERVER_CURSOR_MAXTIMEMS: 30000
-      FRONT_URL: http://localhost:8087
+      FRONT_URL: http://127.0.0.1:8087
       FULLTEXT_URL: http://fulltext:4700
       LAST_NAME_FIRST: true
     networks:
       - internal-services
-      - traefik-public
+      - hanzo-network
     labels:
       - "traefik.enable=true"
-      # WebSocket route
       - "traefik.http.routers.transactor-ws.entrypoints=websecure"
-      - "traefik.http.routers.transactor-ws.rule=Host(`hitek.com.vn`) && PathPrefix(`/ws/transactor`)"
+      - "traefik.http.routers.transactor-ws.rule=Host(`127.0.0.1`) && PathPrefix(`/ws/transactor`)"
       - "traefik.http.routers.transactor-ws.tls=true"
       - "traefik.http.routers.transactor-ws.tls.certresolver=myresolver"
       - "traefik.http.services.transactor-ws.loadbalancer.server.port=3333"
@@ -142,7 +106,7 @@ services:
 
       # HTTP route for non-WebSocket traffic
       - "traefik.http.routers.transactor.entrypoints=websecure"
-      - "traefik.http.routers.transactor.rule=Host(`hitek.com.vn`) && PathPrefix(`/transactor`)"
+      - "traefik.http.routers.transactor.rule=Host(`127.0.0.1`) && PathPrefix(`/transactor`)"
       - "traefik.http.routers.transactor.tls=true"
       - "traefik.http.routers.transactor.tls.certresolver=myresolver"
       - "traefik.http.services.transactor.loadbalancer.server.port=3333"
@@ -152,19 +116,20 @@ services:
       - "traefik.http.middlewares.strip-transactor-prefix.stripprefix.prefixes=/transactor"
 
   collaborator:
-    image: hanzoai/collaborator:latest
+    image: hanzoai/collaborator:5.1.1
     restart: unless-stopped
+
     environment:
       <<: *common-env
       COLLABORATOR_PORT: 3078
     networks:
       - internal-services
-      - traefik-public
+      - hanzo-network
     labels:
       - "traefik.enable=true"
       # WebSocket route
       - "traefik.http.routers.collaborator-ws.entrypoints=websecure"
-      - "traefik.http.routers.collaborator-ws.rule=Host(`hitek.com.vn`) && PathPrefix(`/ws/collaborator`)"
+      - "traefik.http.routers.collaborator-ws.rule=Host(`127.0.0.1`) && PathPrefix(`/ws/collaborator`)"
       - "traefik.http.routers.collaborator-ws.tls=true"
       - "traefik.http.routers.collaborator-ws.tls.certresolver=myresolver"
       - "traefik.http.services.collaborator-ws.loadbalancer.server.port=3078"
@@ -175,7 +140,7 @@ services:
       - "traefik.http.middlewares.strip-collaborator-ws-prefix.stripprefix.prefixes=/ws/collaborator"
       # HTTP route for non-WebSocket traffic
       - "traefik.http.routers.collaborator.entrypoints=websecure"
-      - "traefik.http.routers.collaborator.rule=Host(`hitek.com.vn`) && PathPrefix(`/collaborator`)"
+      - "traefik.http.routers.collaborator.rule=Host(`127.0.0.1`) && PathPrefix(`/collaborator`)"
       - "traefik.http.routers.collaborator.tls=true"
       - "traefik.http.routers.collaborator.tls.certresolver=myresolver"
       - "traefik.http.services.collaborator.loadbalancer.server.port=3078"
@@ -185,71 +150,78 @@ services:
       - "traefik.http.middlewares.strip-collaborator-prefix.stripprefix.prefixes=/collaborator"
 
   account:
-    image: hanzoai/account:latest
+    image: hanzoai/account:5.1.1
+
     restart: unless-stopped
     environment:
       <<: *common-env
       SERVER_PORT: 3000
-      TRANSACTOR_URL: ws://transactor:3333;wss://hitek.com.vn/ws/transactor
+      TRANSACTOR_URL: ws://transactor:3333;wss://127.0.0.1/ws/transactor
       FRONT_URL: http://front:8080
       MODEL_ENABLED: "*"
       ACCOUNT_PORT: 3000
     networks:
       - internal-services
-      - traefik-public
+      - hanzo-network
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.account.entrypoints=websecure"
       - "traefik.http.services.account.loadbalancer.server.port=3000"
-      - "traefik.http.routers.account.rule=Host(`hitek.com.vn`) && PathPrefix(`/accounts`)"
+      - "traefik.http.routers.account.rule=Host(`127.0.0.1`) && PathPrefix(`/accounts`)"
       - "traefik.http.routers.account.middlewares=account-stripprefix"
       - "traefik.http.middlewares.account-stripprefix.stripprefix.prefixes=/accounts"
       - "traefik.http.routers.account.tls=true"
       - "traefik.http.routers.account.tls.certresolver=myresolver"
 
   workspace:
-    image: hanzoai/workspace:latest
+    image: hanzoai/workspace:5.1.1
+
     restart: unless-stopped
     environment:
       <<: *common-env
-      TRANSACTOR_URL: ws://transactor:3333;wss://hitek.com.vn/ws/transactor
+      TRANSACTOR_URL: ws://transactor:3333;wss://127.0.0.1/ws/transactor
       MODEL_ENABLED: "*"
     networks:
       - internal-services
 
   front:
-    image: hanzoai/front:latest
+    image: hanzoai/front:5.1.1
     restart: unless-stopped
+
     environment:
       <<: *common-env
       SERVER_PORT: 8080
-      ACCOUNTS_URL: https://hitek.com.vn/accounts
-      REKONI_URL: https://hitek.com.vn/rekoni
-      CALENDAR_URL: https://hitek.com.vn:8095
-      GMAIL_URL: https://hitek.com.vn:8088
-      TELEGRAM_URL: https://hitek.com.vn:8086
-      STATS_URL: https://hitek.com.vn/stats
+      ACCOUNTS_URL: http://127.0.0.1/accounts
+      REKONI_URL: http://127.0.0.1/rekoni
+      CALENDAR_URL: http://127.0.0.1:8095
+      GMAIL_URL: http://127.0.0.1:8088
+      TELEGRAM_URL: http://127.0.0.1:8086
+      STATS_URL: http://127.0.0.1/stats
       UPLOAD_URL: /files
       ELASTIC_URL: http://elastic:9200
-      COLLABORATOR_URL: wss://hitek.com.vn/ws/collaborator
-      TITLE: Huly Self Host
+      COLLABORATOR_URL: wss://127.0.0.1/ws/collaborator
+      TITLE: Hanzo Ai Seft Host
       DEFAULT_LANGUAGE: en
       LAST_NAME_FIRST: true
       DESKTOP_UPDATES_CHANNEL: selfhost
     networks:
       - internal-services
-      - traefik-public
+      - hanzo-network
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.front.entrypoints=websecure"
       - "traefik.http.services.front.loadbalancer.server.port=8080"
-      - "traefik.http.routers.front.rule=Host(`hitek.com.vn`)"
+      - "traefik.http.routers.front.rule=Host(`127.0.0.1`)"
       - "traefik.http.routers.front.tls=true"
       - "traefik.http.routers.front.tls.certresolver=myresolver"
+      - "traefik.http.routers.front-plain.entrypoints=web"
+      - "traefik.http.routers.front-plain.rule=Host(`127.0.0.1`) || Host(`your-public-ip`)"
+      - "traefik.http.routers.front-plain.service=front"
 
   fulltext:
-    image: hanzoai/fulltext:latest
+    image: hanzoai/fulltext:5.1.1
     restart: unless-stopped
+
     environment:
       <<: *common-env
       FULLTEXT_DB_URL: http://elastic:9200
@@ -257,34 +229,35 @@ services:
       REKONI_URL: http://rekoni:4004
     networks:
       - internal-services
+      - hanzo-network
 
   stats:
-    image: hanzoai/stats:latest
+    image: hanzoai/stats:5.1.1
     restart: unless-stopped
+
     environment:
       <<: *common-env
       PORT: 4900
     networks:
       - internal-services
-      - traefik-public
+      - hanzo-network
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.stats.entrypoints=websecure"
       - "traefik.http.services.stats.loadbalancer.server.port=4900"
-      - "traefik.http.routers.stats.rule=Host(`hitek.com.vn`) && PathPrefix(`/stats`)"
+      - "traefik.http.routers.stats.rule=Host(`127.0.0.1`) && PathPrefix(`/stats`)"
       - "traefik.http.routers.stats.middlewares=stats-stripprefix"
       - "traefik.http.middlewares.stats-stripprefix.stripprefix.prefixes=/stats"
       - "traefik.http.routers.stats.tls=true"
       - "traefik.http.routers.stats.tls.certresolver=myresolver"
 
 networks:
-  traefik-public:
-    name: traefik-public
   internal-services:
     name: internal-services
+  hanzo-network:
+    external: true
 
 volumes:
   db:
   elastic:
   files:
-  letsencrypt:
