--- a/server/server/package.json
+++ b/server/server/package.json
@@ -47,6 +47,7 @@
     "@hanzo/platform": "^0.6.16",
     "@hanzo/rpc": "^0.6.10",
     "@hanzo/server-core": "^0.6.5",
-    "@hanzo/server-token": "^0.6.16"
+    "@hanzo/server-token": "^0.6.16",
+    "jsonwebtoken": "~9.0.2"
   }
 }
