--- a/server/token/package.json
+++ b/server/token/package.json
@@ -40,7 +40,8 @@
   "dependencies": {
     "@hanzo/core": "^0.6.38",
     "@hanzo/platform": "^0.6.16",
-    "jwt-simple": "^0.5.6"
+    "jwt-simple": "^0.5.6",
+    "jsonwebtoken": "~9.0.2"
   },
   "repository": "https://github.com/hanzoai/team-manager",
   "publishConfig": {
