--- a/server/token/package.json
+++ b/server/token/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@hanzo/platform-rig": "^0.6.0",
-    "@types/node": "~20.11.16",
+    "@types/node": "~22.15.14",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-promise": "^6.1.1",
@@ -35,13 +35,15 @@
     "typescript": "^5.3.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "@types/jest": "^29.5.5"
+    "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "~9.0.9"
   },
   "dependencies": {
     "@hanzo/core": "^0.6.38",
     "@hanzo/platform": "^0.6.16",
     "jwt-simple": "^0.5.6",
-    "jsonwebtoken": "~9.0.2"
+    "jsonwebtoken": "~9.0.2",
+    "node": "~24.0.0"
   },
   "repository": "https://github.com/hanzoai/team-manager",
   "publishConfig": {
