--- a/services/mail/pod-inbound-mail/package.json
+++ b/services/mail/pod-inbound-mail/package.json
@@ -18,7 +18,7 @@
     "_phase:docker-build": "rushx docker:build",
     "_phase:docker-staging": "rushx docker:staging",
     "bundle": "node ../../../common/scripts/esbuild.js --external=ws",
-    "docker:build": "../../../common/scripts/docker_build.sh hardcoreeng/inbound-mail",
+    "docker:build": "node ../../../common/scripts/run-docker-build.js hardcoreeng/inbound-mail",
     "docker:staging": "../../../common/scripts/docker_tag.sh hardcoreeng/inbound-mail staging",
     "docker:abuild": "docker build -t hardcoreeng/inbound-mail . --platform=linux/arm64 && ../../../common/scripts/docker_tag_push.sh hardcoreeng/inbound-mail",
     "docker:push": "../../../common/scripts/docker_tag.sh hardcoreeng/inbound-mail",
@@ -61,8 +61,8 @@
     "@hanzo/analytics-service": "^0.6.0",
     "@hanzo/api-client": "^0.6.0",
     "@hanzo/card": "^0.6.1",
-    "@hanzo/communication-rest-client": "0.1.166",
-    "@hanzo/communication-types": "0.1.166",
+    "@hanzo/communication-rest-client": "0.1.176",
+    "@hanzo/communication-types": "0.1.176",
     "@hanzo/contact": "^0.6.24",
     "@hanzo/core": "^0.6.32",
     "@hanzo/mail": "^0.6.0",
