--- a/services/ai-bot/pod-ai-bot/package.json
+++ b/services/ai-bot/pod-ai-bot/package.json
@@ -18,7 +18,7 @@
     "_phase:docker-build": "rushx docker:build",
     "_phase:docker-staging": "rushx docker:staging",
     "bundle": "node ../../../common/scripts/esbuild.js",
-    "docker:build": "../../../common/scripts/docker_build.sh hardcoreeng/ai-bot",
+    "docker:build": "node ../../../common/scripts/run-docker-build.js hardcoreeng/ai-bot",
     "docker:staging": "../../../common/scripts/docker_tag.sh hardcoreeng/ai-bot staging",
     "docker:push": "../../../common/scripts/docker_tag.sh hardcoreeng/ai-bot",
     "docker:tbuild": "rush bundle --to @hanzo/pod-ai-bot && docker build -t hardcoreeng/ai-bot . --platform=linux/amd64 && ../../../common/scripts/docker_tag_push.sh hardcoreeng/ai-bot",
