--- a/services/export/pod-export/package.json
+++ b/services/export/pod-export/package.json
@@ -18,7 +18,7 @@
     "_phase:docker-build": "rushx docker:build",
     "_phase:docker-staging": "rushx docker:staging",
     "bundle": "node ../../../common/scripts/esbuild.js --keep-names=true",
-    "docker:build": "../../../common/scripts/docker_build.sh hardcoreeng/export",
+    "docker:build": "node ../../../common/scripts/run-docker-build.js hardcoreeng/export",
     "docker:staging": "../../../common/scripts/docker_tag.sh hardcoreeng/export staging",
     "docker:push": "../../../common/scripts/docker_tag.sh hardcoreeng/export",
     "format": "format src",
