--- a/services/msg2file/package.json
+++ b/services/msg2file/package.json
@@ -18,7 +18,7 @@
     "_phase:docker-build": "rushx docker:build",
     "_phase:docker-staging": "rushx docker:staging",
     "bundle": "node ../../common/scripts/esbuild.js --external=ws",
-    "docker:build": "../../common/scripts/docker_build.sh hardcoreeng/msg2file .",
+    "docker:build": "node ../../common/scripts/run-docker-build.js hardcoreeng/msg2file .",
     "docker:tbuild": "docker build -t hardcoreeng/msg2file . --platform=linux/amd64 && ../../common/scripts/docker_tag_push.sh hardcoreeng/msg2file",
     "docker:staging": "../../common/scripts/docker_tag.sh hardcoreeng/msg2file staging",
     "docker:push": "../../common/scripts/docker_tag.sh hardcoreeng/msg2file",
@@ -57,11 +57,11 @@
   "dependencies": {
     "@hanzo/api-client": "^0.6.0",
     "@hanzo/card": "^0.6.1",
-    "@hanzo/communication-types": "0.1.166",
-    "@hanzo/communication-shared": "0.1.166",
-    "@hanzo/communication-yaml": "0.1.166",
-    "@hanzo/communication-sdk-types": "0.1.166",
-    "@hanzo/communication-rest-client": "0.1.166",
+    "@hanzo/communication-types": "0.1.176",
+    "@hanzo/communication-shared": "0.1.176",
+    "@hanzo/communication-yaml": "0.1.176",
+    "@hanzo/communication-sdk-types": "0.1.176",
+    "@hanzo/communication-rest-client": "0.1.176",
     "@hanzo/core": "^0.6.32",
     "@hanzo/platform": "^0.6.11",
     "@hanzo/server-client": "^0.6.0",
