--- a/services/ses/pod-ses/package.json
+++ b/services/ses/pod-ses/package.json
@@ -18,7 +18,7 @@
     "_phase:docker-build": "rushx docker:build",
     "_phase:docker-staging": "rushx docker:staging",
     "bundle": "node ../../../common/scripts/esbuild.js",
-    "docker:build": "../../../common/scripts/docker_build.sh hardcoreeng/ses",
+    "docker:build": "node ../../../common/scripts/run-docker-build.js hardcoreeng/ses",
     "docker:staging": "../../../common/scripts/docker_tag.sh hardcoreeng/ses staging",
     "docker:abuild": "docker build -t hardcoreeng/ses . --platform=linux/arm64 && ../../../common/scripts/docker_tag_push.sh hardcoreeng/ses",
     "docker:push": "../../../common/scripts/docker_tag.sh hardcoreeng/ses",
