--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "eslint.probe": ["javascript", "typescript", "html", "markdown", "svelte"],
   "eslint.validate": ["javascript", "typescript", "markdown", "svelte"],
   "eslint.lintTask.enable": true,
+  "search.useIgnoreFiles": true,
   "[typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
